--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <input id="pin" type="password" placeholder="Enter your pin" class="input input-bordered" required />
                           </div>
                           <div class="form-control mt-6">
-                            <button class="btn btn-primary" type="submit">Cash Out Confirm</button>
+                            <button id="cash-out-confirm" class="btn btn-primary" type="submit">Cash Out Confirm</button>
                           </div>
                         </form>
                       </div>
