--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payoo Home</title>
+    <title>Payo Home</title>
     <link
     href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css"
     rel="stylesheet"
