--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
           <div class="camera"></div>
           <div class="display">
             <div class="artboard artboard-demo phone-1">
-                <h1 class="font-bold text-2xl text-blue-600 mb-4">Wellcome PAYOO BANK</h1>
+                <h1 class="font-bold text-2xl text-blue-600 mb-4">Wellcome  BANK</h1>
                 <div class="card bg-base-100  shrink-0 shadow-2xl">
                     <form class="card-body">
                       <div class="form-control">
